{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 29,
  "lineage": "8df89f87-f00a-ed3f-ee5c-3c1949266928",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "",
            "fingerprint": "CdYXVL6F9UE=",
            "id": "projects/linear-archway-412518/global/securityPolicies/de-macovid-data-security-policy",
            "name": "de-macovid-data-security-policy",
            "project": "linear-archway-412518",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "Whitelist IP",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "73.219.247.50/32"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 100,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "default rule",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/linear-archway-412518/global/securityPolicies/de-macovid-data-security-policy",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/linear-archway-412518/regions/us-east1/networkEndpointGroups/de-macovid-data-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-03-31T11:36:01.779-07:00",
            "enable_cdn": false,
            "fingerprint": "heYKLdlIQUM=",
            "generated_id": 7287336684270916606,
            "id": "projects/linear-archway-412518/global/backendServices/de-macovid-data-urlmap-backend-default",
            "load_balancing_scheme": "EXTERNAL",
            "name": "de-macovid-data-urlmap-backend-default",
            "port_name": "http",
            "project": "linear-archway-412518",
            "protocol": "HTTP",
            "security_policy": "https://www.googleapis.com/compute/beta/projects/linear-archway-412518/global/securityPolicies/de-macovid-data-security-policy",
            "self_link": "https://www.googleapis.com/compute/v1/projects/linear-archway-412518/global/backendServices/de-macovid-data-urlmap-backend-default",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "data.http.myip",
            "google_cloud_run_service.run_service",
            "google_compute_region_network_endpoint_group.cloudrun_neg",
            "google_compute_security_policy.policy",
            "google_filestore_instance.instance",
            "google_project_service.cloudrun",
            "google_vpc_access_connector.connector"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.98.67.178",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-03-31T10:59:12.662-07:00",
            "id": "projects/linear-archway-412518/global/addresses/de-macovid-data-urlmap-address",
            "label_fingerprint": "tjR8I27v5HY=",
            "labels": {
              "example-label": "cloud-run-example"
            },
            "name": "de-macovid-data-urlmap-address",
            "prefix_length": 0,
            "project": "linear-archway-412518",
            "self_link": "https://www.googleapis.com/compute/v1/projects/linear-archway-412518/global/addresses/de-macovid-data-urlmap-address"
          }
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/linear-archway-412518/global/forwardingRules/de-macovid-data-urlmap",
            "ip_address": "34.98.67.178",
            "ip_protocol": "TCP",
            "label_fingerprint": "tjR8I27v5HY=",
            "labels": {
              "example-label": "cloud-run-example"
            },
            "load_balancing_scheme": "EXTERNAL",
            "name": "de-macovid-data-urlmap",
            "port_range": "80-80",
            "project": "linear-archway-412518",
            "self_link": "https://www.googleapis.com/compute/v1/projects/linear-archway-412518/global/forwardingRules/de-macovid-data-urlmap",
            "target": "https://www.googleapis.com/compute/beta/projects/linear-archway-412518/global/targetHttpProxies/de-macovid-data-urlmap-http-proxy"
          },
          "dependencies": [
            "data.http.myip",
            "google_cloud_run_service.run_service",
            "google_compute_region_network_endpoint_group.cloudrun_neg",
            "google_compute_security_policy.policy",
            "google_filestore_instance.instance",
            "google_project_service.cloudrun",
            "google_vpc_access_connector.connector",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_global_address.default",
            "module.lb-http.google_compute_target_http_proxy.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-31T11:36:46.152-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/linear-archway-412518/global/targetHttpProxies/de-macovid-data-urlmap-http-proxy",
            "name": "de-macovid-data-urlmap-http-proxy",
            "project": "linear-archway-412518",
            "proxy_bind": false,
            "proxy_id": 8774796408493708241,
            "self_link": "https://www.googleapis.com/compute/v1/projects/linear-archway-412518/global/targetHttpProxies/de-macovid-data-urlmap-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/linear-archway-412518/global/urlMaps/de-macovid-data-urlmap-url-map"
          },
          "dependencies": [
            "data.http.myip",
            "google_cloud_run_service.run_service",
            "google_compute_region_network_endpoint_group.cloudrun_neg",
            "google_compute_security_policy.policy",
            "google_filestore_instance.instance",
            "google_project_service.cloudrun",
            "google_vpc_access_connector.connector",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-31T11:36:34.784-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/linear-archway-412518/global/backendServices/de-macovid-data-urlmap-backend-default",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "kk0kpSLGRek=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/linear-archway-412518/global/urlMaps/de-macovid-data-urlmap-url-map",
            "map_id": 2179030035563025373,
            "name": "de-macovid-data-urlmap-url-map",
            "path_matcher": [],
            "project": "linear-archway-412518",
            "self_link": "https://www.googleapis.com/compute/v1/projects/linear-archway-412518/global/urlMaps/de-macovid-data-urlmap-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.http.myip",
            "google_cloud_run_service.run_service",
            "google_compute_region_network_endpoint_group.cloudrun_neg",
            "google_compute_security_policy.policy",
            "google_filestore_instance.instance",
            "google_project_service.cloudrun",
            "google_vpc_access_connector.connector",
            "module.lb-http.google_compute_backend_service.default"
          ]
        }
      ]
    }
  ]
}